chore: Add OpenAI and Cloudflare configuration

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/omegle-next"
+OPENAI_API_KEY="" # Added to mitigate warning message
+CLOUDFLARE_KEY=""
+CLOUDFLARE_ACCOUNT_ID=""
