refactor: :sparkles: migrated backend from Cloudflare Workers to self-built boilerplate so it can be deployed to Render

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
+WORKER_DOMAIN="localhost:8787"
 DATABASE_URL="postgresql://postgres:password@localhost:5432/omegle-next"
-OPENAI_API_KEY="" # Added to mitigate warning message
-CLOUDFLARE_KEY=""
-CLOUDFLARE_ACCOUNT_ID=""
+# OPENAI_API_KEY="" # Deprecated
+# CLOUDFLARE_KEY="" # Deprecated
+# CLOUDFLARE_ACCOUNT_ID="" # Deprecated
