--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "worker:dev": "cd worker && pnpm dev",
+    "worker:deploy": "cd worker && pnpm deploy"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.14.0",
+    "@rajesh896/broprint.js": "^2.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "framer-motion": "^11.3.18",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
